<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="tiatt.jw.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="tiatt.jw.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="tiatt.jw.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_quiz02"
        android:name="tiatt.jw.ui.quiz.QuizFragment"
        android:label="@string/menu_quiz02"
        tools:layout="@layout/fragment_quiz"
        />

    <fragment
        android:id="@+id/nav_setting"
        android:name="tiatt.jw.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_quiz"
        />

    <fragment
        android:id="@+id/nav_wordmix"
        android:name="tiatt.jw.ui.wordmix.WordMixFragment"
        android:label="@string/menu_wordmix"
        tools:layout="@layout/fragment_wordmix"
        />
</navigation>