<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_book_black_18dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_autorenew_black_18dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/baseline_accessibility_new_black_18dp"
            android:title="@string/menu_tools" />
        <!--
        <item
            android:id="@+id/nav_quiz02"
            android:icon="@drawable/baseline_accessibility_new_black_18dp"
            android:title="@string/menu_quiz02" />
            -->
        <item
            android:id="@+id/nav_wordmix"
            android:icon="@drawable/baseline_accessibility_black_18dp"
            android:title="@string/menu_wordmix" />
        <!--
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_black_18dp"
            android:title="@string/menu_setting" />

-->
    </group>



</menu>
